# homebot_dispatcher

./: .gitattributes  .gitignore  README.md  capture_demo.sh  setup_wsl.sh  smoke_test.sh
src/homebot/: package.xml  setup.cfg  setup.py
src/homebot/config/: params.yaml
src/homebot/homebot/: intent_parser.py  robot_simulator.py  sensor_node.py  task_dispatcher.py
src/homebot/launch/: homebot.launch.py
src/homebot/test/: test_intent_parser.py
